--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome | Chat</title>
+    <title>Aleredan | Chat</title>
     <link rel="icon" href="img/icone_sitel.png">
     <link rel="shotcut icon" href="img/icone_sitel.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -33,7 +33,10 @@
                         <a class="nav-link" tabindex="-1" aria-disabled="true" href="escalacao.html">Escalação</a>
                     </li>
                     <li class="nav-item"> <!--active-->
-                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="#sem-dps.html">Sem DPS</a>
+                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="sem-dps.html">Sem DPS</a>
+                    </li>
+                    <li class="nav-item"> <!--active-->
+                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="bateria.html">Bateria</a>
                     </li>
                 </ul>
             </div>
