--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome</title>
+    <title>Aleredan</title>
     <link rel="icon" href="img/icone_sitel.png">
     <link rel="shotcut icon" href="img/icone_sitel.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -35,12 +35,15 @@
                     <li class="nav-item"> <!--active-->
                         <a class="nav-link" tabindex="-1" aria-disabled="true" href="sem-dps.html">Sem DPS</a>
                     </li>
+                    <li class="nav-item"> <!--active-->
+                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="bateria.html">Bateria</a>
+                    </li>
                 </ul>
             </div>
         </nav>
     </header>
     <main class="container">
-        <p>&#11088; Bem vindo ao <strong>Nome</strong>! Espero que te traga produtividade</p>
+        <p>&#11088; Bem vindo ao <strong>Aleredan</strong>! Espero que te traga produtividade</p>
     </main>
     <footer></footer>
     
