add view de contra senha

--- a/bateria.html
+++ b/bateria.html
@@ -54,11 +54,11 @@
             <div class="dropdown-divider"></div>
             <div class="form-row">
                 <div class="form-group col">
-                    <label for="bateria-projeto">Projeto total</label>
+                    <label for="bateria-projeto">Projeto total *</label>
                     <input type="number" id="bateria-projeto" class="form-control form-control-sm" placeholder="41998" required min="1">
                 </div>
                 <div class="form-group col">
-                    <label for="bateria-atual">Último carregamento total</label>
+                    <label for="bateria-atual">Último carregamento total *</label>
                     <input type="number" id="bateria-atual" class="form-control form-control-sm" placeholder="32889" required min="1">
                 </div>
             </div>
