--- a/sem-dps.html
+++ b/sem-dps.html
@@ -47,15 +47,15 @@
             <form onsubmit="semDps.adiciona(event)">
                 <div class="form-row">
                     <div class="form-group col">
-                        <label for="login">Owner Login</label>
-                        <input type="text" class="form-control form-control-sm" id="login" required="" placeholder="Fulano_XX" pattern="[&quot;A-Za-z0-9_&quot;]{5,20}" title="login de Citrix">
+                        <label for="login">Owner Login *</label>
+                        <input type="text" class="form-control form-control-sm" id="login" required="" placeholder="seu_login_de_citrix" pattern="[&quot;A-Za-z0-9_&quot;]{5,20}" title="login de Citrix">
                     </div>
                     <div class="form-group col">
-                        <label for="caso">Case</label>
+                        <label for="caso">Case *</label>
                         <input type="number" class="form-control form-control-sm" id="caso" required="" placeholder="XXXXXXXX" pattern="[&quot;0-9&quot;]{8}" title="8 dígitos" maxlength="8">
                     </div>
                     <div class="form-group col">
-                        <label for="data">Data</label>
+                        <label for="data">Data *</label>
                         <input type="date" class="form-control form-control-sm" id="data" required="" placeholder="XX/XX/XXXX" maxlength="8">
                     </div>
                     <div class="form-group col">
