--- a/good-lines.html
+++ b/good-lines.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aleredan | 5 Good Lines</title>
+    <title>...</title>
     <link rel="icon" href="img/icone_sitel.png">
     <link rel="shotcut icon" href="img/icone_sitel.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -13,34 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="index.html">
-                <p style="border-radius: 50px; background-color: red; color: white; width: 1.5em; text-align: center; margin: 0;">S</p>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 nav-menu">
-                    <li class="nav-item"> <!--active-->
-                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="chat.html">Chat</a>
-                    </li>
-                    <li class="nav-item active"> <!--active-->
-                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="good-lines.html">5 Good Lines</a>
-                    </li>
-                    <li class="nav-item"> <!--active-->
-                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="escalacao.html">Escalação</a>
-                    </li>
-                    <li class="nav-item"> <!--active-->
-                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="sem-dps.html">Sem DPS</a>
-                    </li>
-                    <li class="nav-item"> <!--active-->
-                        <a class="nav-link" tabindex="-1" aria-disabled="true" href="bateria.html">Bateria</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <header class="menu-view">
+        
     </header>
     <main id="section-good-lines">
         <div class="container">
@@ -109,6 +83,13 @@
     <script src="js/app/libs/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/app/libs/bootstrap.min.js"></script>
+
+    <script src="js/app/view/View.js"></script>
+    <script src="js/app/view/MenuPaginas.js"></script>
+    <script>
+        let menuView = new MenuPaginas(document.querySelector(".menu-view"), "ativo-good-lines", "5 Good Lines")
+        menuView.update()
+    </script>
     
     <!--<script>
         document.querySelector(".navbar").addEventListener("click", function(event){
