completo contra senha

--- a/escalacao.html
+++ b/escalacao.html
@@ -44,7 +44,7 @@
             <li class="nav-item dropdown" role="presentation">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Links</a>
                 <div class="dropdown-menu">
-                    <!--<a class="dropdown-item" id="link-cpf-tab" data-toggle="tab" href="#link-cpf" role="tab" aria-controls="link-cpf" aria-selected="false" target="_blank" href="https://servicos.receita.fazenda.gov.br/Servicos/CPF/ConsultaSituacao/ConsultaPublica.asp">Validar CPF</a>
+                    <a class="dropdown-item" id="link-cpf-tab" data-toggle="tab" href="#link-cpf" role="tab" aria-controls="link-cpf" aria-selected="false" target="_blank" href="https://servicos.receita.fazenda.gov.br/Servicos/CPF/ConsultaSituacao/ConsultaPublica.asp">Validar CPF</a>
                     <a class="dropdown-item" target="_blank" href="https://www.receita.fazenda.gov.br/pessoajuridica/cnpj/cnpjreva/cnpjreva_solicitacao2.asp">Validar CNPJ</a>
                     <a class="dropdown-item" target="_blank" href="http://www.sintegra.gov.br/">Sintegra</a>
                     <a class="dropdown-item" target="_blank" href="http://www.buscacep.correios.com.br/sistemas/buscacep/buscaCepEndereco.cfm">Consultar CEP</a>
@@ -64,21 +64,21 @@
         </ul>
         <div class="tab-content container" id="myTabContent">
             <!--forms aqui-->
-            <div class="tab-pane fade" id="guidance" role="tabpanel" aria-labelledby="guidance-tab">Form de guidance...</div>
-            <div class="tab-pane fade" id="dps-repeat" role="tabpanel" aria-labelledby="dps-repeat-tab">Form de 3º, 4º e 5º DPSs...</div>
-            <div class="tab-pane fade" id="exchange" role="tabpanel" aria-labelledby="exchange-tab">Form de Exchange...</div>
-            <div class="tab-pane fade" id="reembolso" role="tabpanel" aria-labelledby="reembolso-tab">Form de reembolso...</div>
-            <div class="tab-pane fade" id="office" role="tabpanel" aria-labelledby="office-tab">Form Office...</div>
-            <div class="tab-pane fade show active" id="contra-senha" role="tabpanel" aria-labelledby="contra-senha-tab">Form de contrasenha...</div>
+            <div class="tab-pane fade" id="guidance" role="tabpanel" aria-labelledby="guidance-tab">...</div>
+            <div class="tab-pane fade" id="dps-repeat" role="tabpanel" aria-labelledby="dps-repeat-tab">...</div>
+            <div class="tab-pane fade" id="exchange" role="tabpanel" aria-labelledby="exchange-tab">...</div>
+            <div class="tab-pane fade" id="reembolso" role="tabpanel" aria-labelledby="reembolso-tab">...</div>
+            <div class="tab-pane fade" id="office" role="tabpanel" aria-labelledby="office-tab">...</div>
+            <div class="tab-pane fade show active" id="contra-senha" role="tabpanel" aria-labelledby="contra-senha-tab">...</div>
             <!--links-->
-            <!--<iframe src="https://servicos.receita.fazenda.gov.br/Servicos/CPF/ConsultaSituacao/ConsultaPublica.asp" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-cpf" role="tabpanel" aria-labelledby="link-cpf-tab"></iframe>
+            <iframe src="https://servicos.receita.fazenda.gov.br/Servicos/CPF/ConsultaSituacao/ConsultaPublica.asp" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-cpf" role="tabpanel" aria-labelledby="link-cpf-tab"></iframe>
             <iframe src="https://www.receita.fazenda.gov.br/pessoajuridica/cnpj/cnpjreva/cnpjreva_solicitacao2.asp" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-cnpj" role="tabpanel" aria-labelledby="link-cnpj-tab"></iframe>
             <iframe src="http://www.sintegra.gov.br/" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-sintegra" role="tabpanel" aria-labelledby="link-sintegra-tab"></iframe>
             <iframe src="http://www.buscacep.correios.com.br/sistemas/buscacep/buscaCepEndereco.cfm" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-cep" role="tabpanel" aria-labelledby="link-cep-tab"></iframe>
 
             <iframe src="file:///Z:/03.TECH/08.%20PROCESSOS/L1/Tech%20(Cons%20&%20Comm)/320_TECH_MASTER%20COMO%20ABRIR%20UM%20CHAMADO%20REV52.pdf" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-320" role="tabpanel" aria-labelledby="link-320-tab"></iframe>
             <iframe src="file:///S:/03.TECH/08.%20PROCESSOS/L1/Tech%20(Cons%20&%20Comm)/230_TECH_COMO%20ESCALAR%20UM%20CASO%20L1%20REV54.pdf" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-230" role="tabpanel" aria-labelledby="link-230-tab"></iframe>
-            <iframe src="file:///S:/03.TECH/08.%20PROCESSOS/L2_SUPERVISOR/Tech%20(Cons%20&%20Comm)/231_TECH_COMO%20ESCALAR%20UM%20CASO%20L2%20REV62.pdf" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-231" role="tabpanel" aria-labelledby="link-231-tab"></iframe>-->
+            <iframe src="file:///S:/03.TECH/08.%20PROCESSOS/L2_SUPERVISOR/Tech%20(Cons%20&%20Comm)/231_TECH_COMO%20ESCALAR%20UM%20CASO%20L2%20REV62.pdf" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-231" role="tabpanel" aria-labelledby="link-231-tab"></iframe>
         </div>
     </main>
     <footer></footer>
