--- a/escalacao.html
+++ b/escalacao.html
@@ -35,11 +35,11 @@
             </li>
             
             <li class="nav-item" role="presentation">
-                <a class="nav-link disabled" id="office-tab" data-toggle="tab" href="#office" role="tab" aria-controls="office" aria-selected="false">Office</a>
+                <a class="nav-link active" id="office-tab" data-toggle="tab" href="#office" role="tab" aria-controls="office" aria-selected="false">Office</a>
             </li>
             
             <li class="nav-item" role="presentation">
-                <a class="nav-link active" id="contra-senha-tab" data-toggle="tab" href="#contra-senha" role="tab" aria-controls="contra-senha" aria-selected="false">Contra senha</a>
+                <a class="nav-link" id="contra-senha-tab" data-toggle="tab" href="#contra-senha" role="tab" aria-controls="contra-senha" aria-selected="false">Contra senha</a>
             </li>
             <li class="nav-item dropdown" role="presentation">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Links</a>
@@ -68,8 +68,8 @@
             <div class="tab-pane fade" id="dps-repeat" role="tabpanel" aria-labelledby="dps-repeat-tab">...</div>
             <div class="tab-pane fade" id="exchange" role="tabpanel" aria-labelledby="exchange-tab">...</div>
             <div class="tab-pane fade" id="reembolso" role="tabpanel" aria-labelledby="reembolso-tab">...</div>
-            <div class="tab-pane fade" id="office" role="tabpanel" aria-labelledby="office-tab">...</div>
-            <div class="tab-pane fade show active" id="contra-senha" role="tabpanel" aria-labelledby="contra-senha-tab">...</div>
+            <div class="tab-pane fade show active" id="office" role="tabpanel" aria-labelledby="office-tab">...</div>
+            <div class="tab-pane fade" id="contra-senha" role="tabpanel" aria-labelledby="contra-senha-tab">...</div>
             <!--links-->
             <iframe src="https://servicos.receita.fazenda.gov.br/Servicos/CPF/ConsultaSituacao/ConsultaPublica.asp" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-cpf" role="tabpanel" aria-labelledby="link-cpf-tab"></iframe>
             <iframe src="https://www.receita.fazenda.gov.br/pessoajuridica/cnpj/cnpjreva/cnpjreva_solicitacao2.asp" frameborder="0" width="100%" height="500px" class="tab-pane fade" id="link-cnpj" role="tabpanel" aria-labelledby="link-cnpj-tab"></iframe>
