--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <meta
+    name="description"           
+    content="Uma simples SPA com algumas funções relevantes ao meu trabalho para melhorar a minha produtividade e dos meus colegas.">
 </head>
 <body>
     <script src="dist/bundle.js"></script>
