--- a/antigo/antigo/html/templates.html
+++ b/antigo/antigo/html/templates.html
@@ -80,7 +80,7 @@ main {
 	background: #fff;
 	float: right;
 	width:100%;
-	padding: 0 5rem 0 15rem;
+	padding: 0;
 	text-align: -webkit-center;
 }
 main .abre-menu{
